k8s/services.yml
---

apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  selector:
    app: back
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
