k8s/ingress.yml
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /(.*)
        backend:
          serviceName: front
          servicePort: 80
      - path: /api/?(.*)
        backend:
          serviceName: back
          servicePort: 80
